# airbnb2-study-backend

./: README.md  pyproject.toml
bookings/: admin.py  models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_initial.py  0005_alter_booking_experience_alter_booking_room_and_more.py  0006_alter_booking_experience_time.py  0007_alter_booking_experience_time.py  0008_remove_booking_experience_time_and_more.py
categories/: serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py
config/: authentication.py  settings.py
direct_messages/migrations/: 0001_initial.py  0002_initial.py  0003_alter_chattingroom_users_alter_message_room_and_more.py
experiences/: admin.py  models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_initial.py  0003_alter_experience_category_alter_experience_host_and_more.py
medias/migrations/: 0001_initial.py  0002_initial.py  0003_alter_photo_experience_alter_photo_room_and_more.py  0004_alter_photo_file_alter_video_file.py
reviews/: admin.py
reviews/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  serializers.py  tests.py  views.py
rooms/migrations/: 0001_initial.py  0002_initial.py  0003_alter_room_amenities_alter_room_category_and_more.py
users/: admin.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar.py
wishlists/: urls.py
wishlists/migrations/: 0001_initial.py  (+1 more)
